ws: Fix capture release on window destruction

The capture window should only be cleared if it's part of the client.

Fixes the case where dragging a touch edit handle closes the context menu.
(the context menu closing shouldn't reset client-side touch handle capture)
(otherwise, capture release isn't sent to the ws when ending the touch drag)

Bug: 873743
Test: Automated, KSV (Ctrl-Alt-/) touch text edit handles work.
Change-Id: I4e28115de92f7b8cb0355b6a9e4c0b470634ad2b
Reviewed-on: https://chromium-review.googlesource.com/1176073
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583358}
Former-commit-id: 8812d56315174245afaa979c7f4ecaddf35e7bf0